--- a/app/src/main/res/menu/fragment_bin.xml
+++ b/app/src/main/res/menu/fragment_bin.xml
@@ -6,7 +6,7 @@
 
     <item android:id="@+id/item_clear"
           android:icon="@drawable/ic_clear"
-          android:title="@string/menu_page_bin_clear"
+          android:title="@string/menu_clear_bin"
           app:showAsAction="always"/>
 
 </menu>
