--- a/app/src/main/res/menu/fragment_notes.xml
+++ b/app/src/main/res/menu/fragment_notes.xml
@@ -6,12 +6,12 @@
 
     <item android:id="@+id/item_notification"
           android:icon="@drawable/ic_notifications"
-          android:title="@string/menu_page_notes_preference"
+          android:title="@string/menu_notifications"
           app:showAsAction="always"/>
 
     <item android:id="@+id/item_preference"
           android:icon="@drawable/ic_preference"
-          android:title="@string/menu_page_notes_preference"
+          android:title="@string/menu_preference"
           app:showAsAction="always"/>
 
 </menu>
