--- a/app/src/main/res/values/strings_dialog.xml
+++ b/app/src/main/res/values/strings_dialog.xml
@@ -14,11 +14,11 @@
     <string name="dialog_item_rank">Without category</string>
 
     <string name="dialog_title_convert">Convert</string>
-    <string name="dialog_roll_convert_to_text">
-        Are you sure you want to convert the note? All checks in the list will be lost.
-    </string>
-    <string name="dialog_text_convert_to_roll">
+    <string name="dialog_text_convert_text">
         Are you sure you want to convert the note? All empty lines will be deleted.
+    </string>
+    <string name="dialog_roll_convert_roll">
+        Are you sure you want to convert the note? All checks in the list will be lost.
     </string>
 
     <string name="dialog_title_add_note">Create note</string>
@@ -43,13 +43,13 @@
     <string name="dialog_menu_notification_update">Update notification</string>
     <string name="dialog_menu_status_bind">Bind to status bar</string>
     <string name="dialog_menu_status_unbind">Unbind from status bar</string>
-    <string name="dialog_menu_convert_to_text">Convert to text</string>
-    <string name="dialog_menu_convert_to_roll">Convert to roll</string>
+    <string name="dialog_menu_convert_roll">Convert to text</string>
+    <string name="dialog_menu_convert_text">Convert to roll</string>
 
     <string-array name="dialog_menu_text">
         <item/>
         <item/>
-        <item>@string/dialog_menu_convert_to_roll</item>
+        <item>@string/dialog_menu_convert_text</item>
         <item>@string/dialog_menu_copy</item>
         <item>@string/dialog_menu_delete</item>
     </string-array>
@@ -57,7 +57,7 @@
     <string-array name="dialog_menu_roll">
         <item/>
         <item/>
-        <item>@string/dialog_menu_convert_to_text</item>
+        <item>@string/dialog_menu_convert_roll</item>
         <item>@string/dialog_menu_copy</item>
         <item>@string/dialog_menu_delete</item>
     </string-array>
@@ -68,7 +68,7 @@
         <item>@string/dialog_menu_clear</item>
     </string-array>
 
-    <string name="about_app_developer">Developer:\nKuznetsov Alexey</string>
-    <string name="about_app_logo_designer">Logo designer:\nPolepkina Arina</string>
+    <string name="dialog_about_developer">Developer:\nKuznetsov Alexey</string>
+    <string name="dialog_about_logo_designer">Logo designer:\nPolepkina Arina</string>
 
 </resources>
