--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -54,7 +54,7 @@
                 <View
                         android:id="@+id/note_text_color_view"
                         style="@style/Image.Color.Vertical.End"
-                        android:contentDescription="@null"
+                        android:importantForAccessibility="no"
                         app:indicatorColor='@{item.color}'
                         app:indicatorTheme='@{theme}'
                         app:visibleOn='@{Theme.DARK}'
