--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -14,14 +14,14 @@
             android:layout_height="@dimen/icon_48dp"
             android:layout_gravity="center"
             android:background="@drawable/ic_color"
-            android:contentDescription="@null"/>
+            android:importantForAccessibility="no"/>
 
     <ImageView
             android:id="@+id/color_check_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:contentDescription="@null"
+            android:importantForAccessibility="no"
             app:srcCompat="@drawable/ic_check"/>
 
     <!-- TODO 13.10.18 Сделать область нажатия круглой, для pre API21 -->
