--- a/app/src/main/res/values/strings_description.xml
+++ b/app/src/main/res/values/strings_description.xml
@@ -17,4 +17,9 @@
     <string name="description_note_convert_roll">Convert to text</string>
     <string name="description_note_delete">Delete</string>
 
+
+    <string name="description_rank_show">Show category with name: </string>
+    <string name="description_rank_hide">Hide category with name: </string>
+    <string name="description_rank_cancel">Cancel category with name: </string>
+
 </resources>
