--- a/app/src/main/res/values/strings_description.xml
+++ b/app/src/main/res/values/strings_description.xml
@@ -18,8 +18,12 @@
     <string name="description_note_delete">Delete</string>
 
 
-    <string name="description_rank_show">Show category with name: </string>
-    <string name="description_rank_hide">Hide category with name: </string>
-    <string name="description_rank_cancel">Cancel category with name: </string>
+    <string name="description_item_rank_show">Show category with name: </string>
+    <string name="description_item_rank_hide">Hide category with name: </string>
+    <string name="description_item_rank_cancel">Cancel category with name: </string>
+
+
+    <string name="description_enter_rank_clear">Clear category enter</string>
+    <string name="description_enter_rank_add">Add category</string>
 
 </resources>
