Add contentDescription for rollNoteEnter
Tag: #Refactor

--- a/app/src/main/res/layout/include_roll_note_enter.xml
+++ b/app/src/main/res/layout/include_roll_note_enter.xml
@@ -52,7 +52,7 @@
                     android:id="@+id/roll_note_add_button"
                     style="@style/Button.Small"
                     android:layout_gravity="bottom"
-                    android:contentDescription="@null"
+                    android:contentDescription="@string/description_enter_roll_add"
                     app:boolExpression='@{!enterEmpty}'
                     app:enabled='@{!enterEmpty}'
                     app:falseColor='@{R.attr.clDisable}'
