--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -28,7 +28,7 @@
                     style="@style/Button.Medium"
                     android:layout_marginStart="@dimen/layout_4dp"
                     android:layout_marginEnd="@dimen/layout_8dp"
-                    android:contentDescription='@{(item.visible ? @string/description_item_rank_hide : @string/description_item_rank_show) + item.name}'
+                    android:contentDescription='@{(item.visible ? @string/description_item_rank_hide : @string/description_item_rank_show) + " " + item.name}'
                     app:srcDisable="@drawable/ic_visible_enter"
                     app:srcDisableAnim="@drawable/anim_visible_exit"
                     app:srcDisableColor="?attr/clContent"
@@ -67,7 +67,7 @@
                     style="@style/Button.Medium"
                     android:layout_marginStart="@dimen/layout_8dp"
                     android:layout_marginEnd="@dimen/layout_4dp"
-                    android:contentDescription='@{@string/description_item_rank_cancel + item.name}'
+                    android:contentDescription='@{@string/description_item_rank_cancel + " " + item.name}'
                     android:tint="?attr/clContent"
                     app:srcCompat="@drawable/ic_cancel_enter"/>
 
