--- a/app/src/main/res/values/strings_description.xml
+++ b/app/src/main/res/values/strings_description.xml
@@ -17,11 +17,12 @@
     <string name="description_note_convert_roll">Convert to text</string>
     <string name="description_note_delete">Delete</string>
 
-
     <string name="description_item_rank_show">Show category with name: </string>
     <string name="description_item_rank_hide">Hide category with name: </string>
     <string name="description_item_rank_cancel">Cancel category with name: </string>
 
+    <string name="description_item_notification_cancel">Cancel notification with name:</string>
+    <string name="description_item_notification_cancel_at">\nWhich setup at:</string>
 
     <string name="description_enter_rank_clear">Clear category enter</string>
     <string name="description_enter_rank_add">Add category</string>
