--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -67,7 +67,7 @@
                     android:layout_marginLeft="@dimen/layout_8dp"
                     android:layout_marginEnd="@dimen/layout_4dp"
                     android:layout_marginRight="@dimen/layout_4dp"
-                    android:contentDescription="@null"
+                    android:contentDescription='@{@string/description_item_notification_cancel + " " + (item.note.name.isEmpty() ? @string/hint_text_name : item.note.name) + @string/description_item_notification_cancel_at + " " + item.alarm.date}'
                     android:tint="?attr/clContent"
                     app:srcCompat="@drawable/ic_cancel_enter"/>
 
