--- a/app/src/main/res/values-ru/strings_description.xml
+++ b/app/src/main/res/values-ru/strings_description.xml
@@ -24,6 +24,10 @@
     <string name="description_item_notification_cancel">Убрать уведомление с именем:</string>
     <string name="description_item_notification_cancel_at">\nКоторое установлено на:</string>
 
+    <string name="description_item_roll_check">Отметить пункт с тектом:</string>
+    <string name="description_item_roll_uncheck">Снать отметку пункта с тектом:</string>
+    <string name="description_item_roll_move">Переместить пункт с тектом:</string>
+
     <string name="description_enter_rank_clear">Отчистить поле ввода категории</string>
     <string name="description_enter_rank_add">Добавить категорию</string>
     <string name="description_enter_roll_add">Добавить пункт</string>
