--- a/app/src/main/res/values-ru/strings_description.xml
+++ b/app/src/main/res/values-ru/strings_description.xml
@@ -28,6 +28,8 @@
     <string name="description_item_roll_uncheck">Снать отметку пункта с тектом:</string>
     <string name="description_item_roll_move">Переместить пункт с тектом:</string>
 
+    <string name="description_item_color">Выбрать %s цвет</string>
+
     <string name="description_enter_rank_clear">Отчистить поле ввода категории</string>
     <string name="description_enter_rank_add">Добавить категорию</string>
     <string name="description_enter_roll_add">Добавить пункт</string>
