--- a/app/src/main/res/values-ru/strings_description.xml
+++ b/app/src/main/res/values-ru/strings_description.xml
@@ -17,6 +17,8 @@
     <string name="description_note_convert_roll">Конвертировать в текст</string>
     <string name="description_note_delete">Удалить</string>
 
+    <string name="description_button_alarm_more">Выбрать повтор уведомления</string>
+
     <string name="description_item_rank_show">Показать категорию с именем: </string>
     <string name="description_item_rank_hide">Скрыть категорию с именем: </string>
     <string name="description_item_rank_cancel">Убрать категорию с именем: </string>
