--- a/app/src/main/res/values/strings_description.xml
+++ b/app/src/main/res/values/strings_description.xml
@@ -17,6 +17,8 @@
     <string name="description_note_convert_roll">Convert to text</string>
     <string name="description_note_delete">Delete</string>
 
+    <string name="description_button_alarm_more">Select alarm repeat</string>
+
     <string name="description_item_rank_show">Show category with name: </string>
     <string name="description_item_rank_hide">Hide category with name: </string>
     <string name="description_item_rank_cancel">Cancel category with name: </string>
