--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -52,7 +52,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:padding="@dimen/layout_4dp"
+            android:padding="@dimen/layout_2dp"
             tools:alpha="0.5"
             tools:visibility="visible">
 
@@ -66,12 +66,12 @@
                 android:textColor="?attr/clAccent"/>
 
         <Button
-                android:id="@+id/alarm_postpone_button"
+                android:id="@+id/alarm_repeat_button"
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.38"
-                android:text="@string/button_postpone"
+                android:text="@string/button_repeat"
                 android:textColor="?attr/clAccent"/>
 
         <ImageButton
