--- a/app/src/main/res/values/values_preference.xml
+++ b/app/src/main/res/values/values_preference.xml
@@ -15,6 +15,8 @@
         <item>10</item>
         <item>30</item>
         <item>60</item>
+        <item>180</item>    <!-- 3 hour -->
+        <item>1440</item>   <!-- 1 day -->
     </integer-array>
 
     <integer name="value_alarm_signal">1</integer>
