--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -14,6 +14,9 @@
     <string name="menu_clear_bin">Очистить корзину</string>
 
     <!-- Notifications -->
+    <string name="notification_notes_channel">Заметки</string>
+    <string name="notification_info_channel">Информация</string>
+
     <string name="notification_group_notes">Scriptum заметки</string>
     <string name="notification_group_info">Scriptum информация</string>
 
