--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -24,11 +24,11 @@
     <string name="notification_notes_channel_id" translatable="false">scriptum_notes_channel_id</string>
     <string name="notification_info_channel_id" translatable="false">scriptum_info_channel_id</string>
 
-    <string name="notification_notes_channel">Notes</string>
-    <string name="notification_info_channel">Info</string>
+    <string name="notification_group_notes" translatable="false">scriptum_notes_group_key</string>
+    <string name="notification_group_info" translatable="false">scriptum_info_group_key</string>
 
-    <string name="notification_group_notes">Scriptum notes</string>
-    <string name="notification_group_info">Scriptum info</string>
+    <string name="notification_info_channel">Info</string>
+    <string name="notification_notes_channel">Notes</string>
 
     <string name="notification_button_unbind">Unbind</string>
 
