Add simple click control by editMode for notePanel
Tag: #Refactor #Fix

--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -193,7 +193,7 @@
                         android:id="@+id/note_panel_edit_button"
                         style="@style/Button.Small"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:onClick='@{() -> menuCallback.onMenuEdit(true)}'
+                        android:onClick='@{() -> menuCallback.onMenuEdit()}'
                         android:text="@string/button_note_edit"/>
 
             </LinearLayout>
