--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -1,101 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:key="screen">
 
-    <PreferenceCategory android:title="@string/header_app">
+    <PreferenceCategory android:title="@string/header_app" app:iconSpaceReserved="false">
 
         <Preference
                 android:defaultValue="@integer/value_app_theme"
                 android:key="@string/key_app_theme"
                 android:summary="@string/summary_app_theme"
-                android:title="@string/title_app_theme"/>
+                android:title="@string/title_app_theme"
+                app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/header_note">
+    <PreferenceCategory android:title="@string/header_note" app:iconSpaceReserved="false">
 
         <Preference
                 android:defaultValue="@integer/value_note_sort"
                 android:key="@string/key_note_sort"
                 android:summary="@string/summary_note_sort"
-                android:title="@string/title_note_sort"/>
+                android:title="@string/title_note_sort"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_note_color"
                 android:key="@string/key_note_color"
                 android:summary="@string/summary_note_color"
-                android:title="@string/title_note_color"/>
+                android:title="@string/title_note_color"
+                app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/header_notification">
+    <PreferenceCategory android:title="@string/header_notification" app:iconSpaceReserved="false">
 
         <CheckBoxPreference
                 android:defaultValue="@bool/value_alarm_increase"
                 android:key="@string/key_alarm_increase"
                 android:summary="@string/summary_alarm_increase"
-                android:title="@string/title_alarm_increase"/>
+                android:title="@string/title_alarm_increase"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_alarm_signal"
                 android:key="@string/key_alarm_signal"
                 android:summary="@string/summary_alarm_signal"
-                android:title="@string/title_alarm_signal"/>
+                android:title="@string/title_alarm_signal"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:key="@string/key_alarm_melody"
                 android:summary="@string/summary_alarm_melody"
-                android:title="@string/title_alarm_melody"/>
+                android:title="@string/title_alarm_melody"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_alarm_volume"
                 android:key="@string/key_alarm_volume"
                 android:summary="@string/summary_alarm_volume"
-                android:title="@string/title_alarm_volume"/>
+                android:title="@string/title_alarm_volume"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_alarm_repeat"
                 android:key="@string/key_alarm_repeat"
                 android:summary="@string/summary_alarm_repeat"
-                android:title="@string/title_alarm_repeat"/>
+                android:title="@string/title_alarm_repeat"
+                app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/header_save">
+    <PreferenceCategory android:title="@string/header_save" app:iconSpaceReserved="false">
 
         <CheckBoxPreference
                 android:defaultValue="@bool/value_save_pause"
                 android:key="@string/key_save_pause"
                 android:summary="@string/summary_save_pause"
-                android:title="@string/title_save_pause"/>
+                android:title="@string/title_save_pause"
+                app:iconSpaceReserved="false"/>
 
         <CheckBoxPreference
                 android:defaultValue="@bool/value_save_auto"
                 android:key="@string/key_save_auto"
                 android:summary="@string/summary_save_auto"
-                android:title="@string/title_save_auto"/>
+                android:title="@string/title_save_auto"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_save_time"
                 android:key="@string/key_save_time"
                 android:summary="@string/summary_save_time"
-                android:title="@string/title_save_time"/>
+                android:title="@string/title_save_time"
+                app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/header_other">
+    <PreferenceCategory android:title="@string/header_other" app:iconSpaceReserved="false">
 
         <Preference
                 android:key="@string/key_other_rate"
-                android:title="@string/title_other_rate"/>
+                android:title="@string/title_other_rate"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:key="@string/key_other_privacy_policy"
-                android:title="@string/title_other_privacy_policy"/>
+                android:title="@string/title_other_privacy_policy"
+                app:iconSpaceReserved="false"/>
 
         <Preference
                 android:key="@string/key_other_about"
-                android:title="@string/title_other_about"/>
+                android:title="@string/title_other_about"
+                app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
